--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,3 +4,17 @@ body
     text-align: center;
     font-family: Arial;
 }
+#contenido
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+
+
+}
+#contenido h1 
+{
+    font-size: 20px;
+}
