--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body
 {
-    color: crimson;
+    color: black;
     text-align: center;
-    font-family: Arial;
+    font-family: Courier;
 }
 #contenido
 {
