estamos en una tipografia mas estandar

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: black;
     text-align: center;
-    font-family: Courier;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #mundoalterno
 {
